# RBE_502_Controls_Project

./: .gitignore  CMakeLists.txt  Makefile  README.md  package.xml  setup.py
launch/: Controller.launch  Controller_and_vicon.launch  Controller_and_vicon.launch~  PID_Controller.launch  README.md  Vicon.launch  controls.launch  simulation.launch  turtlebot.launch  vicon.launch
nodes/controls/: .DFL_Controller.py.swp  Controller.py  Controller.py~  DFL_Controller.py  DFL_controller.py  MPC_Controller.py  NLF_Controller.py  PID_Controller.py  PID_controller.py  README.md  RobotState.py  Robot_State.py  Simulation.py  __init__.py  post_processing.py  tester.py
pydoc/: Controller.html  DFL_Controller.html  MPC_Controller.html  NLF_Controller.html  PID_Controller.html  Robot_State.html  Simulation.html  __init__.html  post_processing.html
